--- a/.github/workflows/tauri-action.yml
+++ b/.github/workflows/tauri-action.yml
@@ -39,4 +39,4 @@ jobs:
           releaseName: 'IroSphere v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: true
-          prerelease: true
+          prerelease: false
