--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "tauri": "tauri",
     "dev": "vite",
     "build": "tsc && vite build",
-    "githubPages": "tsc && vite build --outDir docs",
+    "githubPages": "tsc && vite build --outDir docs --base=\"./\"",
     "preview": "vite preview"
   },
   "devDependencies": {
