--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/three": "^0.150.1",
+    "sass": "^1.61.0",
     "three": "^0.151.2",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
